add nltc support

--- a/abridge/src/player.html
+++ b/abridge/src/player.html
@@ -34,7 +34,7 @@
     [% if self.game.count_for_me[North] { %]<span class="alert">Counting</span>[% } %]
     [% let pc = self.game.playable_cards(Seat::North, self.seat); pc %]
     [% if self.game.count_for_me[self.seat] && pc.hand.len() > 0 { %]
-        <span class="alert">[% pc.hcp() %] HCP</span><span class="alert">[% pc.lhcp() %] LHCP</span><span class="alert">[% pc.shcp() %] SHCP</span>[%
+        <span class="alert">[% pc.hcp() %] HCP</span><span class="alert">[% pc.lhcp() %] LHCP</span><span class="alert">[% pc.shcp() %] SHCP</span><span class="alert">[% pc.nltc() %] NLTC</span>[%
      } %]
 </div>
 <table>
@@ -44,7 +44,7 @@
     [% if self.game.count_for_me[West] { %]<span class="alert">Counting</span>[% } %]
     [% let pc = self.game.playable_cards(Seat::West, self.seat); pc %]
     [% if self.game.count_for_me[self.seat] && pc.hand.len() > 0 { %]
-        <span class="alert">[% pc.hcp() %] HCP</span><span class="alert">[% pc.lhcp() %] LHCP</span><span class="alert">[% pc.shcp() %] SHCP</span>[%
+        <span class="alert">[% pc.hcp() %] HCP</span><span class="alert">[% pc.lhcp() %] LHCP</span><span class="alert">[% pc.shcp() %] SHCP</span><span class="alert">[% pc.nltc() %] NLTC</span>[%
      } %]
 </div></td>
 <td>
@@ -66,7 +66,7 @@
     [% if self.game.count_for_me[East] { %]<span class="alert">Counting</span>[% } %]
     [% let pc = self.game.playable_cards(Seat::East, self.seat); pc %]
     [% if self.game.count_for_me[self.seat] && pc.hand.len() > 0 { %]
-        <span class="alert">[% pc.hcp() %] HCP</span><span class="alert">[% pc.lhcp() %] LHCP</span><span class="alert">[% pc.shcp() %] SHCP</span>[%
+        <span class="alert">[% pc.hcp() %] HCP</span><span class="alert">[% pc.lhcp() %] LHCP</span><span class="alert">[% pc.shcp() %] SHCP</span><span class="alert">[% pc.nltc() %] NLTC</span>[%
      } %]
 </div></td>
 </tr>
@@ -76,7 +76,7 @@
     [% if self.game.count_for_me[South] { %]<span class="alert">Counting</span>[% } %]
     [% let pc = self.game.playable_cards(Seat::South, self.seat); pc %]
     [% if self.game.count_for_me[self.seat] && pc.hand.len() > 0 { %]
-        <span class="alert">[% pc.hcp() %] HCP</span><span class="alert">[% pc.lhcp() %] LHCP</span><span class="alert">[% pc.shcp() %] SHCP</span>[%
+        <span class="alert">[% pc.hcp() %] HCP</span><span class="alert">[% pc.lhcp() %] LHCP</span><span class="alert">[% pc.shcp() %] SHCP</span><span class="alert">[% pc.nltc() %] NLTC</span>[%
      } %]
 </div>
 [% } %]
