only show tooltip if there is something to see

--- a/abridge/src/player.html
+++ b/abridge/src/player.html
@@ -7,7 +7,8 @@
         <th>[% who.next().next().next().name() %]</th></tr>
     [% for row in (0..self.game.bids.len()).collect::<Vec<_>>().chunks(4) {
         %]<tr>[% for &i in row.iter() {
-            %]<td><span  class="hastooltip">[% self.game.bids[i] %]<span class="tooltip">[% self.game.bids[i] %]: [% self.game.bid_description(&self.game.bids[0..i+1]) %]</span></span></td>[%
+            let d = self.game.bid_description(&self.game.bids[0..i+1]);
+            %]<td><span [% if d.len() >1 { %] class="hastooltip"[% } %]>[% self.game.bids[i] %][% if d.len() >1 { %]<span class="tooltip">[% self.game.bids[i] %]: [% self.game.bid_description(&self.game.bids[0..i+1]) %]</span>[% } %]</span></td>[%
             } %]</tr>[%
     } %]
 </table>
