add a few more conventions

--- a/abridge/src/player.html
+++ b/abridge/src/player.html
@@ -126,3 +126,5 @@
 }
 %]
 <input type="checkbox" [% Action::ToggleCountForMe %] id="countforme" name="countforme"[% if self.game.count_for_me[self.seat] { %] checked[% } %]><label for="countforme">Count for me</label><br>
+
+<p>Using convention [% self.game.conventions[0].name() %]</p>
