--- a/abridge/src/index.html
+++ b/abridge/src/index.html
@@ -16,14 +16,14 @@
             Please play.
         </p>
         <ul>
-            [% if self.players.0[Seat::North].is_empty() { %]<li><a href="/abridge/north">Sit North</a></li>[% } %]
-            [% if self.players.0[Seat::South].is_empty() { %]<li><a href="/abridge/south">Sit South</a></li>[% } %]
-            [% if self.players.0[Seat::East].is_empty() { %]<li><a href="/abridge/east">Sit East</a></li>[% } %]
-            [% if self.players.0[Seat::West].is_empty() { %]<li><a href="/abridge/west">Sit West</a></li>[% } %]
+            [% if self.players.0[Seat::North].is_empty() { %]<li><a href="north">Sit North</a></li>[% } %]
+            [% if self.players.0[Seat::South].is_empty() { %]<li><a href="south">Sit South</a></li>[% } %]
+            [% if self.players.0[Seat::East].is_empty() { %]<li><a href="east">Sit East</a></li>[% } %]
+            [% if self.players.0[Seat::West].is_empty() { %]<li><a href="west">Sit West</a></li>[% } %]
             [% if self.players.0[Seat::West].is_empty() ||
             self.players.0[Seat::East].is_empty() ||
             self.players.0[Seat::North].is_empty() || self.players.0[Seat::South].is_empty() { %]<li><a
-            href="/abridge/random">Sit randomly</a></li>[% } %]
+            href="random">Sit randomly</a></li>[% } %]
         </ul>
     </main>
 </body>
